Added responsive CSS design for portrait screen resolutions.

--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+/* ------------------------------------ */
+/* Main */
 html {
   height: 100%;
   width: 100%;
@@ -8,11 +10,16 @@ body {
   flex-direction: column;
   align-items: center;
 }
-
+/* ------------------------------------ */
+/* Group Containers */
 .textfield-group {
   display: flex;
   flex-direction: row;
   align-items: center;
+}
+
+.input-group {
+  flex-basis: 40%;
 }
 
 .options-group {
@@ -26,7 +33,8 @@ body {
   padding: 5px 5px;
   margin: 0px 20px;
 }
-
+/* ------------------------------------ */
+/* Buttons */
 #swap-button {
   width: 25px;
   height: 25px;
@@ -38,7 +46,8 @@ body {
 #swap-button:hover {
   cursor: pointer;
 }
-
+/* ------------------------------------ */
+/* Texts */
 .header-text {
   font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande", "Lucida Sans Unicode", sans-serif;
   font-size: 16px;
@@ -69,4 +78,17 @@ body {
   font-family: "Arial", "Courier New", Courier, monospace;
   font-weight: bold;
   font-style: italic;
+}
+/* ------------------------------------ */
+/* CSS for small screens */
+@media only screen and (max-width: 1200px) {
+  .textfield-group {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .input-group {
+    flex-basis: 90%;
+  }
 }
